--- a/now.json
+++ b/now.json
@@ -1,6 +1,6 @@
 {
     "version": 2,
     "builds": [
-      { "src": "index.html", "use": "@now/static" }
+      { "src": "*.html", "use": "@now/html-minifier" }
     ]
   }
